--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "author": "Alexander Martinez",
   "license": "ISC",
-
   "dependencies": {
+    "axios": "^1.7.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-facebook-login": "^4.1.1"
   }
 }
